--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -72,4 +72,4 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: clippy
-          args: -- -D warnings
+          args: -- -D warnings -A clippy::needless-range-loop
